2009-07-14  Murray Cumming  <murrayc@murrayc-x61>

	reviewed by: <delete if not using a buddy>

	* gtk/gtk-sections.txt:

2009-07-14  Murray Cumming  <murrayc@murrayc.com>

	reviewed by: <delete if not using a buddy>

	* gtk/gtk-sections.txt:

2009-07-14  Murray Cumming  <murrayc@murrayc.com>

	reviewed by: <delete if not using a buddy>

	* gtk/gtk-sections.txt:

2009-07-13  Murray Cumming  <murrayc@murrayc.com>

	reviewed by: <delete if not using a buddy>

	* gtk/gtk-sections.txt:

=== ChangeLog discontinued ===

	With the move to git, GTK+ is switching from a ChangeLog file
	to relying on commit messages to provide change history. Please
	see README.commits for guidance on the expected message format.

2009-03-25   Paul Bolle <pebolle@tiscali.nl>

	Bug 562863 - GtkVscrollbar is hardly documented

	* gtk/tmpl/gtkvscrollbar.sgml:
	* gtk/tmpl/gtkhscrollbar.sgml: Minor tweaks.

2009-03-24  Matthias Clasen  <mclasen@redhat.com>

	Bug 576150 – Doc bug for GtkMenuPositionFunc

	* gtk/tmpl/gtkmenu.sgml: Remove a misleading sentence.
	Pointed out by Owen Taylor.

2009-03-23  Claudio Saavedra  <csaavedra@igalia.com>

	* gdk-pixbuf/tmpl/animation.sgml: Fix typos and document the
	GdkPixbufSimpleAnim structure.

2009-03-13  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.16.0 ===

2009-03-02  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Rename gtk_style_get_property to
	gtk_style_get_style_property

2009-03-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.5 ===

2009-03-01  Matthias Clasen  <mclasen@redhat.com>

	Bug 573393 – Deprecated functions in gdk-Threads example code snippet

	* gdk/tmpl/threads.sgml: Don't use deprecated GTK+ api.
	Spotted by Andre Klapper

2009-03-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/images/messagedialog.png: Fix this image

	* gtk/images/aboutdialog.png: New image
	* gtk/Makefile.am: Add it here.
	* gtk/visual_index.xml: And here.

2009-02-20  Matthias Clasen  <mclasen@redhat.com>
