@@ -4451,6 +4451,7 @@ gtk_tool_palette_get_icon_size
 gtk_tool_palette_set_icon_size
 gtk_tool_palette_get_style
 gtk_tool_palette_set_style
+gtk_tool_palette_unset_style
 gtk_tool_palette_add_drag_dest
 gtk_tool_palette_get_drag_item
 gtk_tool_palette_get_drag_target_group
@@ -4515,6 +4516,7 @@ gtk_tool_palette_get_group_position
 gtk_tool_palette_set_group_position
 gtk_tool_palette_get_icon_size
 gtk_tool_palette_set_icon_size
+gtk_tool_palette_unset_icon_size
 gtk_tool_palette_get_orientation
 gtk_tool_palette_set_orientation
 gtk_tool_palette_get_style
