@@ -1,3 +1,9 @@
+2009-07-16  Murray Cumming  <murrayc@murrayc.com>
+
+	reviewed by: <delete if not using a buddy>
+
+	* gtk/gtk-sections.txt:
+
 2009-07-14  Murray Cumming  <murrayc@murrayc-x61>
 
 	reviewed by: <delete if not using a buddy>
